k8s/20-deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: workshop
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: ghcr.io/nginxdemos/hello:plain-text
          ports:
            - name: http
              containerPort: 80
